--- a/index.html
+++ b/index.html
@@ -998,11 +998,11 @@
             
             <div class="footer-powered">
                 <i class="fas fa-microchip"></i>
-                <span>Powered by <strong>Dimax Technologies Center</strong></span>
+                <span>Powered by <strong>Bathala</strong></span>
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2026 Bathala Alarm Security Systems. All rights reserved.</p>
+                <p>&copy; Bathala Alarm Security Systems. All rights reserved.</p>
                 <p style="margin-top: 0.5rem;">Designed by <span class="designer">RP8</span></p>
             </div>
         </div>
