--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@
         <div class="footer-content">
             <div class="footer-brand">
                 <h3><i class="fas fa-shield-alt"></i> Bathala Alarm Security Systems</h3>
-                <p>Protecting Filipino Families and Businesses Since 2011</p>
+                <p>Protecting Filipino Families and Businesses</p>
             </div>
             
             <div class="footer-powered">
