--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
                 <p>Security is not just our business—it's our promise to every Filipino household and business. Sleep peacefully knowing Bathala is watching over you.</p>
                 <a href="tel:bathalaintelligence@gmail.com" class="cta-button">
                     <i class="fas fa-phone"></i>
-                    Call 0917-637-4581
+                    Email bathalaintelligence@gmail.com
                 </a>
             </div>
             <div class="hero-image">
