--- a/index.html
+++ b/index.html
@@ -811,7 +811,7 @@
                         <li><i class="fas fa-check"></i> SMS Alerts</li>
                         <li><i class="fas fa-check"></i> Professional Installation</li>
                     </ul>
-                    <a href="tel:bathalaintelligence@gmail.com" class="cta-button" style="width: 100%; justify-content: center;">
+                    <a href="mailto:bathalaintelligence@gmail.com" class="cta-button" style="width: 100%; justify-content: center;">
                         Get Quote
                     </a>
                 </div>
@@ -831,7 +831,7 @@
                         <li><i class="fas fa-check"></i> Central Monitoring</li>
                         <li><i class="fas fa-check"></i> 24/7 Guard Coordination</li>
                     </ul>
-                    <a href="tel:bathalaintelligence@gmail.com" class="cta-button" style="width: 100%; justify-content: center;">
+                    <a href="mailto:bathalaintelligence@gmail.com" class="cta-button" style="width: 100%; justify-content: center;">
                         Get Quote
                     </a>
                 </div>
@@ -850,7 +850,7 @@
                         <li><i class="fas fa-check"></i> Panic Buttons</li>
                         <li><i class="fas fa-check"></i> Business Continuity</li>
                     </ul>
-                    <a href="tel:bathalaintelligence@gmail.com" class="cta-button" style="width: 100%; justify-content: center;">
+                    <a href="mailto:bathalaintelligence@gmail.com" class="cta-button" style="width: 100%; justify-content: center;">
                         Get Quote
                     </a>
                 </div>
