--- a/index.html
+++ b/index.html
@@ -958,7 +958,7 @@
                 bathalaintelligence@gmail.com
             </a>
             
-            <p style="margin-top: 1rem; font-size: 0.875rem;">Sales Hotline</p>
+            <p style="margin-top: 1rem; font-size: 0.875rem;">Sales Email</p>
             
             <div class="contact-hours">
                 <p><i class="fas fa-clock"></i> Available 24/7 for emergencies</p>
