--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@
         <div class="services-container">
             <div class="section-header">
                 <h2>Security Packages for Every Need</h2>
-                <p>From individual homes to entire villages, we have the perfect security solution for you.</p>
+                <p>From individual homes to entire villages and commercial establishments, we have the perfect security solution for you.</p>
             </div>
             <div class="services-grid">
                 <!-- Household Package -->
@@ -822,7 +822,7 @@
                     <div class="service-icon">
                         <i class="fas fa-building"></i>
                     </div>
-                    <h3>Village Pack</h3>
+                    <h3>Village Package</h3>
                     <p>Comprehensive security for subdivisions and gated communities. Protect your entire neighborhood.</p>
                     <ul class="service-features">
                         <li><i class="fas fa-check"></i> Perimeter Security</li>
