--- a/index.html
+++ b/index.html
@@ -977,7 +977,7 @@
             
             <div class="footer-powered">
                 <i class="fas fa-microchip"></i>
-                <span>Powered by <strong>Bathala</strong></span>
+                <span>Powered by <strong>CT Ventures Corp</strong></span>
             </div>
             
             <div class="footer-bottom">
