--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -977,7 +976,7 @@
             
             <div class="footer-powered">
                 <i class="fas fa-microchip"></i>
-                <span>Powered by <strong>CT Ventures Corp</strong></span>
+                <span>Powered by <strong>ICT Ventures Corp</strong></span>
             </div>
             
             <div class="footer-bottom">
