--- a/index.html
+++ b/index.html
@@ -976,7 +976,7 @@
             
             <div class="footer-powered">
                 <i class="fas fa-microchip"></i>
-                <span>Powered by <strong>ICT Ventures Corp</strong></span>
+                <span>Powered by Partners,<strong>ICT Ventures Corp</strong></span>
             </div>
             
             <div class="footer-bottom">
