--- a/index.html
+++ b/index.html
@@ -980,7 +980,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; Bathala Alarm Security Systems. All rights reserved.</p>
+                <p>&copy; Bathala Intelligence. All rights reserved.</p>
                 <p style="margin-top: 0.5rem;">Designed by <span class="designer">RP8</span></p>
             </div>
         </div>
