--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
         <div class="nav-container">
             <div class="logo">
                 <i class="fas fa-shield-alt"></i>
-                <span>Bathala Alarm Security</span>
+                <span>Bathala Alarm Security Systems</span>
             </div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
